--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -181,7 +181,7 @@
 						<i class="fas fa-paper-plane"></i> {{"shared.sendMail" | translate }} </a>
 					</span>
                       <span class="ml-1"  *ngIf="item?.mail ==true">
-						<a  class="btn btn-outline-orange btn-sm btn-outline-orange-active" href="javascript:;">
+						<a *ngIf="utilsHelperService.isEmptyObj(item?.job_application)" class="btn btn-outline-orange btn-sm btn-outline-orange-active" href="javascript:;">
 						<i class="fas fa-paper-plane"></i> {{"shared.sendMail" | translate }} </a>
 					</span>
                     </div>
