--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -165,6 +165,7 @@
 							<li class="list-group-item" *ngIf="childForm?.value?.personalDetails?.work_authorization == 1 ">
 							 {{"userProfile.iNeedVisaAponsorship" | translate }}
 							</li>
+							<li class="list-group-item" *ngIf="childForm?.value?.personalDetails?.work_authorization ==null ">--</li>
 						</ul>
 					</div>
 				</div>
