entry level hands on

--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -205,7 +205,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="row info-box" *ngIf="postJobForm?.value?.jobInfo?.entry ==false" >
+		<div class="row info-box">
 			<div class="col-lg-3 col-md-3 caption">
 				<ul class="list-group">
 					<li class="list-group-item text-capitalize m-0">{{"userProfile.handsOnWith" | translate }}</li>
