--- a/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
@@ -45,7 +45,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="row  info-box" *ngIf="jobInfo?.match_select?.hands_on_experience=='0' && jobInfo?.entry==false ">
+			<div class="row  info-box" *ngIf="jobInfo?.match_select?.hands_on_experience=='0'">
 				<div class="col-lg-5 col-md-5 col-sm-5 caption">
 					<ul class="list-group">
 						<li *ngIf="!isMultipleMatches" class="list-group-item text-capitalize ">{{"userProfile.handsOnWith" | translate }}</li>
