--- a/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
@@ -197,7 +197,7 @@
 		</ul>
 	</div>
 </div>	
-<div class="row"  *ngIf="!userInfo?.entry">
+<div class="row">
 	<div class="col-lg-4 col-md-4 matches-6 col-sm-4 caption">
 		<ul class="list-group">
 			<li class="list-group-item" style="min-height: 46px;">{{"userProfile.handsOnExperience" | translate }}</li>
