--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -283,7 +283,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-lg-12 col-md-12 col-sm-12 row" *ngIf="!childForm?.value?.personalDetails?.entry">
+			<div class="col-lg-12 col-md-12 col-sm-12 row">
 				<div class="col-lg-4 col-md-4 matches-6  col-sm-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"userProfile.handsOnExperience" | translate }}</li>
